# finance

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.yml
frontend/: package.json  vite.config.js
frontend/static_src/backtest/: index.js
frontend/static_src/base/: index.js
frontend/static_src/health/: index.js
frontend/static_src/home/: index.js
frontend/static_src/industries/: index.js
frontend/static_src/search/: index.js
migrations/: 0001_initial.sql  0002_endpoint_guard.sql  0003_guard_budget.sql  0004_fundamentals_unique.sql  0005_fund_profiles.sql  0006_leadership.sql  0007_dividends.sql  0008_etf_stats.sql  0009_picks.sql  0010_quarter_horizon.sql  0011_earnings_calendar.sql  0012_asset_profile.sql  0013_drop_picks.sql  0014_etf_nav_refresh.sql  0015_watchlist.sql
samplefiles/: Caddyfile.sample  env.sample  post-receive.sample
src/: app.rs  compute.rs  db.rs  guard.rs  main.rs  market.rs  middleware.rs  models.rs  picks.rs  render.rs  scheduler.rs  seed.rs  sp500.rs  stream.rs  summary.rs  templates.rs  watchlist.rs
src/providers/: http.rs  mod.rs  sec.rs  stooq.rs  yahoo.rs
src/routes/: backtest.rs  health.rs  home.rs  industries.rs  mod.rs  search.rs  seo.rs  stream.rs  symbols.rs  watchlist.rs
templates/: base.html
templates/includes/: macros.html  status_indicator.html
templates/pages/: backtest.html  error.html  health.html  home.html  industries_detail.html  industries_index.html  not_found.html  search.html  symbol.html
universe/: sp500.txt  starter.csv
(+20 files in other folders)
